# storage/api-docs/api-docs.json
@@ -79,11 +79,13 @@
                                                 200,
                                                 400,
                                                 500
-                                            ]
+                                            ],
+                                            "example": 200
                                         },
                                         "message": {
                                             "description": "message",
-                                            "type": "string"
+                                            "type": "string",
+                                            "example": "请求成功"
                                         },
                                         "data": {
                                             "properties": {
@@ -147,14 +149,244 @@
                                                 200,
                                                 400,
                                                 500
-                                            ]
+                                            ],
+                                            "example": 200
                                         },
                                         "message": {
                                             "description": "message",
-                                            "type": "string"
+                                            "type": "string",
+                                            "example": "请求成功"
                                         },
                                         "data": {
                                             "$ref": "#/components/schemas/StudentWithClassResponseDto"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "student/add": {
+            "get": {
+                "tags": [
+                    "student"
+                ],
+                "description": "添加",
+                "operationId": "b48d5a90c4dfba8d35b44a03fba099d3",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "title": "学生名称",
+                                        "type": "string",
+                                        "example": "张三",
+                                        "rules": [
+                                            "string",
+                                            "required"
+                                        ]
+                                    },
+                                    "age": {
+                                        "title": "学生年龄",
+                                        "type": "integer",
+                                        "example": 18,
+                                        "rules": [
+                                            "integer",
+                                            "required"
+                                        ]
+                                    },
+                                    "class_id": {
+                                        "title": "班级id",
+                                        "type": "integer",
+                                        "example": 1,
+                                        "rules": [
+                                            "integer",
+                                            "required"
+                                        ]
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "code": {
+                                            "description": "code",
+                                            "type": "integer",
+                                            "enum": [
+                                                200,
+                                                400,
+                                                500
+                                            ],
+                                            "example": 200
+                                        },
+                                        "message": {
+                                            "description": "message",
+                                            "type": "string",
+                                            "example": "请求成功"
+                                        },
+                                        "data": {
+                                            "$ref": "#/components/schemas/StudentResponseDto"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "student/update": {
+            "get": {
+                "tags": [
+                    "student"
+                ],
+                "description": "修改",
+                "operationId": "e4f4b903cc9c289945127512ed9a9c14",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "id": {
+                                        "title": "学生id",
+                                        "type": "integer",
+                                        "example": 1,
+                                        "rules": [
+                                            "integer",
+                                            "required"
+                                        ]
+                                    },
+                                    "name": {
+                                        "title": "学生名称",
+                                        "type": "string",
+                                        "example": "张三",
+                                        "rules": [
+                                            "string",
+                                            "required"
+                                        ]
+                                    },
+                                    "age": {
+                                        "title": "学生年龄",
+                                        "type": "integer",
+                                        "example": 18,
+                                        "rules": [
+                                            "integer",
+                                            "required"
+                                        ]
+                                    },
+                                    "class_id": {
+                                        "title": "班级id",
+                                        "type": "integer",
+                                        "example": 1,
+                                        "rules": [
+                                            "integer",
+                                            "required"
+                                        ]
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "code": {
+                                            "description": "code",
+                                            "type": "integer",
+                                            "enum": [
+                                                200,
+                                                400,
+                                                500
+                                            ],
+                                            "example": 200
+                                        },
+                                        "message": {
+                                            "description": "message",
+                                            "type": "string",
+                                            "example": "请求成功"
+                                        },
+                                        "data": {
+                                            "$ref": "#/components/schemas/BoolResponseDto"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "student/delete": {
+            "get": {
+                "tags": [
+                    "student"
+                ],
+                "description": "删除",
+                "operationId": "fdbf5b7037709fc7d1756304a19b2040",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "id": {
+                                        "title": "数据id",
+                                        "type": "integer",
+                                        "example": 1,
+                                        "rules": [
+                                            "integer",
+                                            "required"
+                                        ]
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "code": {
+                                            "description": "code",
+                                            "type": "integer",
+                                            "enum": [
+                                                200,
+                                                400,
+                                                500
+                                            ],
+                                            "example": 200
+                                        },
+                                        "message": {
+                                            "description": "message",
+                                            "type": "string",
+                                            "example": "请求成功"
+                                        },
+                                        "data": {
+                                            "$ref": "#/components/schemas/BoolResponseDto"
                                         }
                                     },
                                     "type": "object"
@@ -174,6 +406,40 @@
                 "properties": {
                     "id": {
                         "title": "数据id",
+                        "type": "integer",
+                        "example": 1,
+                        "rules": [
+                            "integer",
+                            "required"
+                        ]
+                    }
+                },
+                "type": "object"
+            },
+            "StudentAddDto": {
+                "title": "学生创建",
+                "description": "学生创建请求参数",
+                "properties": {
+                    "name": {
+                        "title": "学生名称",
+                        "type": "string",
+                        "example": "张三",
+                        "rules": [
+                            "string",
+                            "required"
+                        ]
+                    },
+                    "age": {
+                        "title": "学生年龄",
+                        "type": "integer",
+                        "example": 18,
+                        "rules": [
+                            "integer",
+                            "required"
+                        ]
+                    },
+                    "class_id": {
+                        "title": "班级id",
                         "type": "integer",
                         "example": 1,
                         "rules": [
@@ -224,6 +490,61 @@
                             "filled",
                             "string"
                         ]
+                    }
+                },
+                "type": "object"
+            },
+            "StudentUpdateDto": {
+                "title": "学生修改",
+                "description": "学生修改请求数据",
+                "properties": {
+                    "id": {
+                        "title": "学生id",
+                        "type": "integer",
+                        "example": 1,
+                        "rules": [
+                            "integer",
+                            "required"
+                        ]
+                    },
+                    "name": {
+                        "title": "学生名称",
+                        "type": "string",
+                        "example": "张三",
+                        "rules": [
+                            "string",
+                            "required"
+                        ]
+                    },
+                    "age": {
+                        "title": "学生年龄",
+                        "type": "integer",
+                        "example": 18,
+                        "rules": [
+                            "integer",
+                            "required"
+                        ]
+                    },
+                    "class_id": {
+                        "title": "班级id",
+                        "type": "integer",
+                        "example": 1,
+                        "rules": [
+                            "integer",
+                            "required"
+                        ]
+                    }
+                },
+                "type": "object"
+            },
+            "BoolResponseDto": {
+                "title": "成功或失败",
+                "description": "",
+                "properties": {
+                    "success": {
+                        "title": "成功或失败",
+                        "type": "boolean",
+                        "example": true
                     }
                 },
                 "type": "object"
